--- a/data_manipulation.html
+++ b/data_manipulation.html
@@ -173,15 +173,14 @@ pups_data = janitor::clean_names(pups_data)</code></pre>
 ## 2       27          42            19
 ## 3       26          41.4          19
 ## # ... with 46 more rows</code></pre>
-<pre class="r"><code>rename(litters_data, GROUP = group, LiTtEr_NuMbEr = litter_number)</code></pre>
-<pre><code>## # A tibble: 49 x 8
-##   GROUP LiTtEr_NuMbEr gd0_weight gd18_weight gd_of_birth pups_born_alive
-##   &lt;chr&gt; &lt;chr&gt;              &lt;dbl&gt;       &lt;dbl&gt;       &lt;int&gt;           &lt;int&gt;
-## 1 Con7  #85                 19.7        34.7          20               3
-## 2 Con7  #1/2/95/2           27          42            19               8
-## 3 Con7  #5/5/3/83/3-3       26          41.4          19               6
-## # ... with 46 more rows, and 2 more variables: pups_dead_birth &lt;int&gt;,
-## #   pups_survive &lt;int&gt;</code></pre>
+<pre class="r"><code>select(litters_data, litter_number, starts_with(&quot;pup&quot;))</code></pre>
+<pre><code>## # A tibble: 49 x 4
+##   litter_number pups_born_alive pups_dead_birth pups_survive
+##   &lt;chr&gt;                   &lt;int&gt;           &lt;int&gt;        &lt;int&gt;
+## 1 #85                         3               4            3
+## 2 #1/2/95/2                   8               0            7
+## 3 #5/5/3/83/3-3               6               0            5
+## # ... with 46 more rows</code></pre>
 <pre class="r"><code>select(litters_data, litter_number, everything())</code></pre>
 <pre><code>## # A tibble: 49 x 8
 ##   litter_number group gd0_weight gd18_weight gd_of_birth pups_born_alive
@@ -191,6 +190,169 @@ pups_data = janitor::clean_names(pups_data)</code></pre>
 ## 3 #5/5/3/83/3-3 Con7        26          41.4          19               6
 ## # ... with 46 more rows, and 2 more variables: pups_dead_birth &lt;int&gt;,
 ## #   pups_survive &lt;int&gt;</code></pre>
+</div>
+<div id="filter-observation" class="section level2">
+<h2>Filter Observation</h2>
+<p>Do some filtering!</p>
+<pre class="r"><code>filter(litters_data, gd0_weight &lt; 25)</code></pre>
+<pre><code>## # A tibble: 20 x 8
+##    group litter_number gd0_weight gd18_weight gd_of_birth pups_born_alive
+##    &lt;chr&gt; &lt;chr&gt;              &lt;dbl&gt;       &lt;dbl&gt;       &lt;int&gt;           &lt;int&gt;
+##  1 Con7  #85                 19.7        34.7          20               3
+##  2 Mod7  #59                 17          33.4          19               8
+##  3 Mod7  #103                21.4        42.1          19               9
+##  4 Mod7  #4/2/95/2           23.5        NA            19               9
+##  5 Mod7  #5/3/83/5-2         22.6        37            19               5
+##  6 Mod7  #106                21.7        37.8          20               5
+##  7 Mod7  #94/2               24.4        42.9          19               7
+##  8 Mod7  #62                 19.5        35.9          19               7
+##  9 Low7  #84/2               24.3        40.8          20               8
+## 10 Low7  #107                22.6        42.4          20               9
+## 11 Low7  #85/2               22.2        38.5          20               8
+## 12 Low7  #98                 23.8        43.8          20               9
+## 13 Low7  #102                22.6        43.3          20              11
+## 14 Low7  #101                23.8        42.7          20               9
+## 15 Low7  #112                23.9        40.5          19               6
+## 16 Mod8  #97                 24.5        42.8          20               8
+## 17 Low8  #53                 21.8        37.2          20               8
+## 18 Low8  #100                20          39.2          20               8
+## 19 Low8  #4/84               21.8        35.2          20               4
+## 20 Low8  #99                 23.5        39            20               6
+## # ... with 2 more variables: pups_dead_birth &lt;int&gt;, pups_survive &lt;int&gt;</code></pre>
+<pre class="r"><code>filter(litters_data, gd0_weight &gt;= 25)</code></pre>
+<pre><code>## # A tibble: 14 x 8
+##    group litter_number gd0_weight gd18_weight gd_of_birth pups_born_alive
+##    &lt;chr&gt; &lt;chr&gt;              &lt;dbl&gt;       &lt;dbl&gt;       &lt;int&gt;           &lt;int&gt;
+##  1 Con7  #1/2/95/2           27          42            19               8
+##  2 Con7  #5/5/3/83/3-3       26          41.4          19               6
+##  3 Con7  #5/4/2/95/2         28.5        44.1          19               5
+##  4 Con8  #3/5/2/2/95         28.5        NA            20               8
+##  5 Con8  #5/4/3/83/3         28          NA            19               9
+##  6 Mod7  #3/82/3-2           28          45.9          20               5
+##  7 Low7  #111                25.5        44.6          20               3
+##  8 Mod8  #7/82-3-2           26.9        43.2          20               7
+##  9 Mod8  #7/110/3-2          27.5        46            19               8
+## 10 Mod8  #2/95/2             28.5        44.5          20               9
+## 11 Mod8  #82/4               33.4        52.7          20               8
+## 12 Low8  #79                 25.4        43.8          19               8
+## 13 Low8  #108                25.6        47.5          20               8
+## 14 Low8  #110                25.5        42.7          20               7
+## # ... with 2 more variables: pups_dead_birth &lt;int&gt;, pups_survive &lt;int&gt;</code></pre>
+<pre class="r"><code>filter(litters_data, pups_born_alive == 8)</code></pre>
+<pre><code>## # A tibble: 16 x 8
+##    group litter_number gd0_weight gd18_weight gd_of_birth pups_born_alive
+##    &lt;chr&gt; &lt;chr&gt;              &lt;dbl&gt;       &lt;dbl&gt;       &lt;int&gt;           &lt;int&gt;
+##  1 Con7  #1/2/95/2           27          42            19               8
+##  2 Con8  #2/95/3             NA          NA            20               8
+##  3 Con8  #3/5/2/2/95         28.5        NA            20               8
+##  4 Con8  #3/5/3/83/3-~       NA          NA            20               8
+##  5 Mod7  #59                 17          33.4          19               8
+##  6 Mod7  #3/83/3-2           NA          NA            19               8
+##  7 Low7  #84/2               24.3        40.8          20               8
+##  8 Low7  #85/2               22.2        38.5          20               8
+##  9 Mod8  #97                 24.5        42.8          20               8
+## 10 Mod8  #5/93/2             NA          NA            19               8
+## 11 Mod8  #7/110/3-2          27.5        46            19               8
+## 12 Mod8  #82/4               33.4        52.7          20               8
+## 13 Low8  #53                 21.8        37.2          20               8
+## 14 Low8  #79                 25.4        43.8          19               8
+## 15 Low8  #100                20          39.2          20               8
+## 16 Low8  #108                25.6        47.5          20               8
+## # ... with 2 more variables: pups_dead_birth &lt;int&gt;, pups_survive &lt;int&gt;</code></pre>
+<pre class="r"><code>filter(litters_data, is.na(gd0_weight))</code></pre>
+<pre><code>## # A tibble: 15 x 8
+##    group litter_number gd0_weight gd18_weight gd_of_birth pups_born_alive
+##    &lt;chr&gt; &lt;chr&gt;              &lt;dbl&gt;       &lt;dbl&gt;       &lt;int&gt;           &lt;int&gt;
+##  1 Con7  #4/2/95/3-3           NA        NA            20               6
+##  2 Con7  #2/2/95/3-2           NA        NA            20               6
+##  3 Con7  #1/5/3/83/3-~         NA        NA            20               9
+##  4 Con8  #3/83/3-3             NA        NA            20               9
+##  5 Con8  #2/95/3               NA        NA            20               8
+##  6 Con8  #1/6/2/2/95-2         NA        NA            20               7
+##  7 Con8  #3/5/3/83/3-~         NA        NA            20               8
+##  8 Con8  #2/2/95/2             NA        NA            19               5
+##  9 Con8  #3/6/2/2/95-3         NA        NA            20               7
+## 10 Mod7  #1/82/3-2             NA        NA            19               6
+## 11 Mod7  #3/83/3-2             NA        NA            19               8
+## 12 Mod7  #2/95/2-2             NA        NA            20               7
+## 13 Mod7  #8/110/3-2            NA        NA            20               9
+## 14 Mod8  #5/93                 NA        41.1          20              11
+## 15 Mod8  #5/93/2               NA        NA            19               8
+## # ... with 2 more variables: pups_dead_birth &lt;int&gt;, pups_survive &lt;int&gt;</code></pre>
+<pre class="r"><code>filter(litters_data, group == &quot;Low8&quot; | group == &quot;Low7&quot;)</code></pre>
+<pre><code>## # A tibble: 15 x 8
+##    group litter_number gd0_weight gd18_weight gd_of_birth pups_born_alive
+##    &lt;chr&gt; &lt;chr&gt;              &lt;dbl&gt;       &lt;dbl&gt;       &lt;int&gt;           &lt;int&gt;
+##  1 Low7  #84/2               24.3        40.8          20               8
+##  2 Low7  #107                22.6        42.4          20               9
+##  3 Low7  #85/2               22.2        38.5          20               8
+##  4 Low7  #98                 23.8        43.8          20               9
+##  5 Low7  #102                22.6        43.3          20              11
+##  6 Low7  #101                23.8        42.7          20               9
+##  7 Low7  #111                25.5        44.6          20               3
+##  8 Low7  #112                23.9        40.5          19               6
+##  9 Low8  #53                 21.8        37.2          20               8
+## 10 Low8  #79                 25.4        43.8          19               8
+## 11 Low8  #100                20          39.2          20               8
+## 12 Low8  #4/84               21.8        35.2          20               4
+## 13 Low8  #108                25.6        47.5          20               8
+## 14 Low8  #99                 23.5        39            20               6
+## 15 Low8  #110                25.5        42.7          20               7
+## # ... with 2 more variables: pups_dead_birth &lt;int&gt;, pups_survive &lt;int&gt;</code></pre>
+<pre class="r"><code>filter(litters_data, group %in% c(&quot;Con7&quot;, &quot;Con8&quot;))</code></pre>
+<pre><code>## # A tibble: 15 x 8
+##    group litter_number gd0_weight gd18_weight gd_of_birth pups_born_alive
+##    &lt;chr&gt; &lt;chr&gt;              &lt;dbl&gt;       &lt;dbl&gt;       &lt;int&gt;           &lt;int&gt;
+##  1 Con7  #85                 19.7        34.7          20               3
+##  2 Con7  #1/2/95/2           27          42            19               8
+##  3 Con7  #5/5/3/83/3-3       26          41.4          19               6
+##  4 Con7  #5/4/2/95/2         28.5        44.1          19               5
+##  5 Con7  #4/2/95/3-3         NA          NA            20               6
+##  6 Con7  #2/2/95/3-2         NA          NA            20               6
+##  7 Con7  #1/5/3/83/3-~       NA          NA            20               9
+##  8 Con8  #3/83/3-3           NA          NA            20               9
+##  9 Con8  #2/95/3             NA          NA            20               8
+## 10 Con8  #3/5/2/2/95         28.5        NA            20               8
+## 11 Con8  #5/4/3/83/3         28          NA            19               9
+## 12 Con8  #1/6/2/2/95-2       NA          NA            20               7
+## 13 Con8  #3/5/3/83/3-~       NA          NA            20               8
+## 14 Con8  #2/2/95/2           NA          NA            19               5
+## 15 Con8  #3/6/2/2/95-3       NA          NA            20               7
+## # ... with 2 more variables: pups_dead_birth &lt;int&gt;, pups_survive &lt;int&gt;</code></pre>
+<pre class="r"><code>filter(litters_data, pups_born_alive %in% 4:6)</code></pre>
+<pre><code>## # A tibble: 12 x 8
+##    group litter_number gd0_weight gd18_weight gd_of_birth pups_born_alive
+##    &lt;chr&gt; &lt;chr&gt;              &lt;dbl&gt;       &lt;dbl&gt;       &lt;int&gt;           &lt;int&gt;
+##  1 Con7  #5/5/3/83/3-3       26          41.4          19               6
+##  2 Con7  #5/4/2/95/2         28.5        44.1          19               5
+##  3 Con7  #4/2/95/3-3         NA          NA            20               6
+##  4 Con7  #2/2/95/3-2         NA          NA            20               6
+##  5 Con8  #2/2/95/2           NA          NA            19               5
+##  6 Mod7  #1/82/3-2           NA          NA            19               6
+##  7 Mod7  #3/82/3-2           28          45.9          20               5
+##  8 Mod7  #5/3/83/5-2         22.6        37            19               5
+##  9 Mod7  #106                21.7        37.8          20               5
+## 10 Low7  #112                23.9        40.5          19               6
+## 11 Low8  #4/84               21.8        35.2          20               4
+## 12 Low8  #99                 23.5        39            20               6
+## # ... with 2 more variables: pups_dead_birth &lt;int&gt;, pups_survive &lt;int&gt;</code></pre>
+<pre class="r"><code>filter(litters_data, pups_born_alive %in% 4:7, !is.na(gd0_weight))</code></pre>
+<pre><code>## # A tibble: 12 x 8
+##    group litter_number gd0_weight gd18_weight gd_of_birth pups_born_alive
+##    &lt;chr&gt; &lt;chr&gt;              &lt;dbl&gt;       &lt;dbl&gt;       &lt;int&gt;           &lt;int&gt;
+##  1 Con7  #5/5/3/83/3-3       26          41.4          19               6
+##  2 Con7  #5/4/2/95/2         28.5        44.1          19               5
+##  3 Mod7  #3/82/3-2           28          45.9          20               5
+##  4 Mod7  #5/3/83/5-2         22.6        37            19               5
+##  5 Mod7  #106                21.7        37.8          20               5
+##  6 Mod7  #94/2               24.4        42.9          19               7
+##  7 Mod7  #62                 19.5        35.9          19               7
+##  8 Low7  #112                23.9        40.5          19               6
+##  9 Mod8  #7/82-3-2           26.9        43.2          20               7
+## 10 Low8  #4/84               21.8        35.2          20               4
+## 11 Low8  #99                 23.5        39            20               6
+## 12 Low8  #110                25.5        42.7          20               7
+## # ... with 2 more variables: pups_dead_birth &lt;int&gt;, pups_survive &lt;int&gt;</code></pre>
 </div>
 
 
