--- a/data_manipulation.html
+++ b/data_manipulation.html
@@ -354,6 +354,54 @@ pups_data = janitor::clean_names(pups_data)</code></pre>
 ## 12 Low8  #110                25.5        42.7          20               7
 ## # ... with 2 more variables: pups_dead_birth &lt;int&gt;, pups_survive &lt;int&gt;</code></pre>
 </div>
+<div id="mutate" class="section level2">
+<h2>Mutate</h2>
+<p>Create variables</p>
+<pre class="r"><code>mutate(litters_data,
+       wt_gain = gd18_weight - gd0_weight,
+       group = tolower(group))</code></pre>
+<pre><code>## # A tibble: 49 x 9
+##   group litter_number gd0_weight gd18_weight gd_of_birth pups_born_alive
+##   &lt;chr&gt; &lt;chr&gt;              &lt;dbl&gt;       &lt;dbl&gt;       &lt;int&gt;           &lt;int&gt;
+## 1 con7  #85                 19.7        34.7          20               3
+## 2 con7  #1/2/95/2           27          42            19               8
+## 3 con7  #5/5/3/83/3-3       26          41.4          19               6
+## # ... with 46 more rows, and 3 more variables: pups_dead_birth &lt;int&gt;,
+## #   pups_survive &lt;int&gt;, wt_gain &lt;dbl&gt;</code></pre>
+<pre class="r"><code>mutate(litters_data,
+       wt_gain = gd18_weight - gd0_weight,
+       wt_gain_squared = wt_gain)</code></pre>
+<pre><code>## # A tibble: 49 x 10
+##   group litter_number gd0_weight gd18_weight gd_of_birth pups_born_alive
+##   &lt;chr&gt; &lt;chr&gt;              &lt;dbl&gt;       &lt;dbl&gt;       &lt;int&gt;           &lt;int&gt;
+## 1 Con7  #85                 19.7        34.7          20               3
+## 2 Con7  #1/2/95/2           27          42            19               8
+## 3 Con7  #5/5/3/83/3-3       26          41.4          19               6
+## # ... with 46 more rows, and 4 more variables: pups_dead_birth &lt;int&gt;,
+## #   pups_survive &lt;int&gt;, wt_gain &lt;dbl&gt;, wt_gain_squared &lt;dbl&gt;</code></pre>
+</div>
+<div id="arrange" class="section level2">
+<h2>Arrange</h2>
+<p>Arrange the data…</p>
+<pre class="r"><code>arrange(litters_data, gd0_weight)</code></pre>
+<pre><code>## # A tibble: 49 x 8
+##   group litter_number gd0_weight gd18_weight gd_of_birth pups_born_alive
+##   &lt;chr&gt; &lt;chr&gt;              &lt;dbl&gt;       &lt;dbl&gt;       &lt;int&gt;           &lt;int&gt;
+## 1 Mod7  #59                 17          33.4          19               8
+## 2 Mod7  #62                 19.5        35.9          19               7
+## 3 Con7  #85                 19.7        34.7          20               3
+## # ... with 46 more rows, and 2 more variables: pups_dead_birth &lt;int&gt;,
+## #   pups_survive &lt;int&gt;</code></pre>
+<pre class="r"><code>arrange(litters_data, desc(pups_born_alive), gd0_weight)</code></pre>
+<pre><code>## # A tibble: 49 x 8
+##   group litter_number gd0_weight gd18_weight gd_of_birth pups_born_alive
+##   &lt;chr&gt; &lt;chr&gt;              &lt;dbl&gt;       &lt;dbl&gt;       &lt;int&gt;           &lt;int&gt;
+## 1 Low7  #102                22.6        43.3          20              11
+## 2 Mod8  #5/93               NA          41.1          20              11
+## 3 Mod7  #103                21.4        42.1          19               9
+## # ... with 46 more rows, and 2 more variables: pups_dead_birth &lt;int&gt;,
+## #   pups_survive &lt;int&gt;</code></pre>
+</div>
 
 
 
